[package]
name = "ryzen-reader"
version = "0.1.1"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
license = "GPL-2.0+"
description = "Read cpu power usage from AMD ryzen cpus on linux"
repository = "https://github.com/icewind1991/ryzen-reader"
documentation = "https://docs.rs/ryzen-reader"
readme = "README.md"

[dependencies]
thiserror = "1.0"